# hecate-server

./: Cargo.toml  README.md
backend/: Cargo.toml  Rocket.toml  build.rs
backend/src/: connection.rs  frame.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs
ui/: Cargo.toml  hecate.css  index.html
ui/src/: fetch.rs  main.rs
