[package]
name = "hecate-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rocket_ws = "0.1.0"
hecate-protobuf = { git = "https://github.com/tiacsys/hecate-protobuf" }
bytes = "1.6.0"
rand = "0.8.5"
charming = { version = "0.3.1", features = ["ssr"] }
