[package]
name = "hecate-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
gloo = "0.11.0"
anyhow = "1.0.81"
huginn-protobuf = { git = "ssh://git@git.intern.jena.navimatix.de/huginn/huginn-protobuf.git" }
charming = { version = "0.3.1", features = ["wasm"] }
polars = { version = "0.39.2", default-features = false, features = ["dynamic_group_by", "fmt_no_tty", "lazy", "serde"] }
yew-hooks = "0.3.1"
serde = "1.0.198"
