[package]
name = "hecate-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
gloo = "0.11.0"
anyhow = "1.0.81"
charming = { version = "0.3.1", features = ["wasm"] }
polars = { version = "0.39.2", default-features = false, features = ["dtype-datetime", "dtype-duration", "dynamic_group_by", "fmt_no_tty", "lazy", "serde", "temporal"] }
yew-hooks = "0.3.1"
serde = "1.0.198"
uuid = { version = "1.8.0", features = ["v4", "js"] }
chrono = "0.4.38"
wasm-bindgen = "0.2.92"
web-sys = "0.3.69"
